yacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOL
    BREAK
    CASE
    COLON
    CONST
    CONTINUE
    DECREMENT
    DEFAULT
    FOR
    GOTO
    IMPORT
    INCREMENT
    INTERFACE
    IOTA
    LBRACKET
    MAKE
    NIL
    NOT
    PACKAGE
    RANGE
    RBRACKET
    RETURN
    SEMICOLON
    SWITCH
    VARIADIC

Grammar

Rule 0     S' -> sentencia
Rule 1     sentencia -> asignacion
Rule 2     sentencia -> asignacion_corta
Rule 3     sentencia -> expresion
Rule 4     sentencia -> pedirDatos
Rule 5     sentencia -> imprimir
Rule 6     sentencia -> crearVariable
Rule 7     asignacion_corta -> IDENTIFIER SHORTASSIGN expresion
Rule 8     crearVariable -> VAR IDENTIFIER tipo ASSIGN expresion
Rule 9     tipo -> int
Rule 10    tipo -> float
Rule 11    tipo -> complex
Rule 12    tipo -> uint
Rule 13    tipo -> bool
Rule 14    tipo -> STRING
Rule 15    int -> INT
Rule 16    int -> INT8
Rule 17    int -> INT16
Rule 18    int -> INT32
Rule 19    int -> INT64
Rule 20    float -> FLOAT32
Rule 21    float -> FLOAT64
Rule 22    uint -> UINT
Rule 23    uint -> UINT8
Rule 24    uint -> UINT16
Rule 25    uint -> UINT32
Rule 26    uint -> UINT64
Rule 27    complex -> COMPLEX64
Rule 28    complex -> COMPLEX128
Rule 29    asignacion -> IDENTIFIER ASSIGN expresion
Rule 30    expresion -> expresionMatematica
Rule 31    expresion -> expresionBooleana
Rule 32    expresion -> STRING
Rule 33    expresionMatematica -> termino
Rule 34    expresionMatematica -> expresionMatematica operando termino
Rule 35    termino -> IDENTIFIER
Rule 36    termino -> numero
Rule 37    termino -> LPAREN expresionMatematica RPAREN
Rule 38    operando -> PLUS
Rule 39    operando -> MINUS
Rule 40    operando -> TIMES
Rule 41    operando -> DIVIDE
Rule 42    operando -> MODULO
Rule 43    numero -> INTEGER
Rule 44    numero -> FLOAT
Rule 45    bool -> TRUE
Rule 46    bool -> FALSE
Rule 47    expresionBooleana -> expresionMatematica operandoBooleano expresionMatematica
Rule 48    expresionBooleana -> expresionBooleana operador_logico expresionBooleana
Rule 49    expresionBooleana -> bool
Rule 50    operandoBooleano -> EQUALS
Rule 51    operandoBooleano -> NOT_EQUALS
Rule 52    operandoBooleano -> MORE_EQUAL
Rule 53    operandoBooleano -> LESS_EQUAL
Rule 54    operandoBooleano -> MORETHAN
Rule 55    operandoBooleano -> LESSTHAN
Rule 56    operador_logico -> LOGICAL_AND
Rule 57    operador_logico -> LOGICAL_OR
Rule 58    pedirDatos -> FMT DOT SCANLN LPAREN AMPERSAND IDENTIFIER RPAREN
Rule 59    imprimir -> FMT DOT PRINTLN LPAREN valores RPAREN
Rule 60    valores -> IDENTIFIER
Rule 61    valores -> IDENTIFIER COMA valores
Rule 62    struct_decl -> TYPE IDENTIFIER STRUCT LBRACE struct_fields RBRACE
Rule 63    struct_fields -> struct_fields struct_field
Rule 64    struct_fields -> struct_field
Rule 65    struct_field -> IDENTIFIER IDENTIFIER
Rule 66    if_stmt -> IF expresionBooleana block else_opt
Rule 67    else_opt -> ELSE block
Rule 68    else_opt -> empty
Rule 69    func_metodo -> FUNC LPAREN IDENTIFIER IDENTIFIER RPAREN IDENTIFIER LPAREN RPAREN LBRACE sentencias RBRACE
Rule 70    lista_parametros -> lista_parametros COMA parametro
Rule 71    lista_parametros -> parametro
Rule 72    lista_parametros -> empty
Rule 73    parametro -> IDENTIFIER IDENTIFIER
Rule 74    block -> LBRACE sentencias RBRACE
Rule 75    sentencias -> sentencias sentencia
Rule 76    sentencias -> sentencia
Rule 77    sentencias -> empty
Rule 78    empty -> <empty>

Terminals, with rules where they appear

AMPERSAND            : 58
ASSIGN               : 8 29
BOOL                 : 
BREAK                : 
CASE                 : 
COLON                : 
COMA                 : 61 70
COMPLEX128           : 28
COMPLEX64            : 27
CONST                : 
CONTINUE             : 
DECREMENT            : 
DEFAULT              : 
DIVIDE               : 41
DOT                  : 58 59
ELSE                 : 67
EQUALS               : 50
FALSE                : 46
FLOAT                : 44
FLOAT32              : 20
FLOAT64              : 21
FMT                  : 58 59
FOR                  : 
FUNC                 : 69
GOTO                 : 
IDENTIFIER           : 7 8 29 35 58 60 61 62 65 65 69 69 69 73 73
IF                   : 66
IMPORT               : 
INCREMENT            : 
INT                  : 15
INT16                : 17
INT32                : 18
INT64                : 19
INT8                 : 16
INTEGER              : 43
INTERFACE            : 
IOTA                 : 
LBRACE               : 62 69 74
LBRACKET             : 
LESSTHAN             : 55
LESS_EQUAL           : 53
LOGICAL_AND          : 56
LOGICAL_OR           : 57
LPAREN               : 37 58 59 69 69
MAKE                 : 
MINUS                : 39
MODULO               : 42
MORETHAN             : 54
MORE_EQUAL           : 52
NIL                  : 
NOT                  : 
NOT_EQUALS           : 51
PACKAGE              : 
PLUS                 : 38
PRINTLN              : 59
RANGE                : 
RBRACE               : 62 69 74
RBRACKET             : 
RETURN               : 
RPAREN               : 37 58 59 69 69
SCANLN               : 58
SEMICOLON            : 
SHORTASSIGN          : 7
STRING               : 14 32
STRUCT               : 62
SWITCH               : 
TIMES                : 40
TRUE                 : 45
TYPE                 : 62
UINT                 : 22
UINT16               : 24
UINT32               : 25
UINT64               : 26
UINT8                : 23
VAR                  : 8
VARIADIC             : 
error                : 

Nonterminals, with rules where they appear

asignacion           : 1
asignacion_corta     : 2
block                : 66 67
bool                 : 13 49
complex              : 11
crearVariable        : 6
else_opt             : 66
empty                : 68 72 77
expresion            : 3 7 8 29
expresionBooleana    : 31 48 48 66
expresionMatematica  : 30 34 37 47 47
float                : 10
func_metodo          : 
if_stmt              : 
imprimir             : 5
int                  : 9
lista_parametros     : 70
numero               : 36
operador_logico      : 48
operando             : 34
operandoBooleano     : 47
parametro            : 70 71
pedirDatos           : 4
sentencia            : 75 76 0
sentencias           : 69 74 75
struct_decl          : 
struct_field         : 63 64
struct_fields        : 62 63
termino              : 33 34
tipo                 : 8
uint                 : 12
valores              : 59 61

Parsing method: LALR

state 0

    (0) S' -> . sentencia
    (1) sentencia -> . asignacion
    (2) sentencia -> . asignacion_corta
    (3) sentencia -> . expresion
    (4) sentencia -> . pedirDatos
    (5) sentencia -> . imprimir
    (6) sentencia -> . crearVariable
    (29) asignacion -> . IDENTIFIER ASSIGN expresion
    (7) asignacion_corta -> . IDENTIFIER SHORTASSIGN expresion
    (30) expresion -> . expresionMatematica
    (31) expresion -> . expresionBooleana
    (32) expresion -> . STRING
    (58) pedirDatos -> . FMT DOT SCANLN LPAREN AMPERSAND IDENTIFIER RPAREN
    (59) imprimir -> . FMT DOT PRINTLN LPAREN valores RPAREN
    (8) crearVariable -> . VAR IDENTIFIER tipo ASSIGN expresion
    (33) expresionMatematica -> . termino
    (34) expresionMatematica -> . expresionMatematica operando termino
    (47) expresionBooleana -> . expresionMatematica operandoBooleano expresionMatematica
    (48) expresionBooleana -> . expresionBooleana operador_logico expresionBooleana
    (49) expresionBooleana -> . bool
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (45) bool -> . TRUE
    (46) bool -> . FALSE
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    IDENTIFIER      shift and go to state 8
    STRING          shift and go to state 11
    FMT             shift and go to state 12
    VAR             shift and go to state 14
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    sentencia                      shift and go to state 1
    asignacion                     shift and go to state 2
    asignacion_corta               shift and go to state 3
    expresion                      shift and go to state 4
    pedirDatos                     shift and go to state 5
    imprimir                       shift and go to state 6
    crearVariable                  shift and go to state 7
    expresionMatematica            shift and go to state 9
    expresionBooleana              shift and go to state 10
    termino                        shift and go to state 15
    bool                           shift and go to state 16
    numero                         shift and go to state 17

state 1

    (0) S' -> sentencia .



state 2

    (1) sentencia -> asignacion .

    $end            reduce using rule 1 (sentencia -> asignacion .)


state 3

    (2) sentencia -> asignacion_corta .

    $end            reduce using rule 2 (sentencia -> asignacion_corta .)


state 4

    (3) sentencia -> expresion .

    $end            reduce using rule 3 (sentencia -> expresion .)


state 5

    (4) sentencia -> pedirDatos .

    $end            reduce using rule 4 (sentencia -> pedirDatos .)


state 6

    (5) sentencia -> imprimir .

    $end            reduce using rule 5 (sentencia -> imprimir .)


state 7

    (6) sentencia -> crearVariable .

    $end            reduce using rule 6 (sentencia -> crearVariable .)


state 8

    (29) asignacion -> IDENTIFIER . ASSIGN expresion
    (7) asignacion_corta -> IDENTIFIER . SHORTASSIGN expresion
    (35) termino -> IDENTIFIER .

    ASSIGN          shift and go to state 22
    SHORTASSIGN     shift and go to state 23
    PLUS            reduce using rule 35 (termino -> IDENTIFIER .)
    MINUS           reduce using rule 35 (termino -> IDENTIFIER .)
    TIMES           reduce using rule 35 (termino -> IDENTIFIER .)
    DIVIDE          reduce using rule 35 (termino -> IDENTIFIER .)
    MODULO          reduce using rule 35 (termino -> IDENTIFIER .)
    EQUALS          reduce using rule 35 (termino -> IDENTIFIER .)
    NOT_EQUALS      reduce using rule 35 (termino -> IDENTIFIER .)
    MORE_EQUAL      reduce using rule 35 (termino -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 35 (termino -> IDENTIFIER .)
    MORETHAN        reduce using rule 35 (termino -> IDENTIFIER .)
    LESSTHAN        reduce using rule 35 (termino -> IDENTIFIER .)
    $end            reduce using rule 35 (termino -> IDENTIFIER .)


state 9

    (30) expresion -> expresionMatematica .
    (34) expresionMatematica -> expresionMatematica . operando termino
    (47) expresionBooleana -> expresionMatematica . operandoBooleano expresionMatematica
    (38) operando -> . PLUS
    (39) operando -> . MINUS
    (40) operando -> . TIMES
    (41) operando -> . DIVIDE
    (42) operando -> . MODULO
    (50) operandoBooleano -> . EQUALS
    (51) operandoBooleano -> . NOT_EQUALS
    (52) operandoBooleano -> . MORE_EQUAL
    (53) operandoBooleano -> . LESS_EQUAL
    (54) operandoBooleano -> . MORETHAN
    (55) operandoBooleano -> . LESSTHAN

    $end            reduce using rule 30 (expresion -> expresionMatematica .)
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    MODULO          shift and go to state 30
    EQUALS          shift and go to state 31
    NOT_EQUALS      shift and go to state 32
    MORE_EQUAL      shift and go to state 33
    LESS_EQUAL      shift and go to state 34
    MORETHAN        shift and go to state 35
    LESSTHAN        shift and go to state 36

    operando                       shift and go to state 24
    operandoBooleano               shift and go to state 25

state 10

    (31) expresion -> expresionBooleana .
    (48) expresionBooleana -> expresionBooleana . operador_logico expresionBooleana
    (56) operador_logico -> . LOGICAL_AND
    (57) operador_logico -> . LOGICAL_OR

    $end            reduce using rule 31 (expresion -> expresionBooleana .)
    LOGICAL_AND     shift and go to state 38
    LOGICAL_OR      shift and go to state 39

    operador_logico                shift and go to state 37

state 11

    (32) expresion -> STRING .

    $end            reduce using rule 32 (expresion -> STRING .)


state 12

    (58) pedirDatos -> FMT . DOT SCANLN LPAREN AMPERSAND IDENTIFIER RPAREN
    (59) imprimir -> FMT . DOT PRINTLN LPAREN valores RPAREN

    DOT             shift and go to state 40


state 13

    (37) termino -> LPAREN . expresionMatematica RPAREN
    (33) expresionMatematica -> . termino
    (34) expresionMatematica -> . expresionMatematica operando termino
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    IDENTIFIER      shift and go to state 42
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    expresionMatematica            shift and go to state 41
    termino                        shift and go to state 15
    numero                         shift and go to state 17

state 14

    (8) crearVariable -> VAR . IDENTIFIER tipo ASSIGN expresion

    IDENTIFIER      shift and go to state 43


state 15

    (33) expresionMatematica -> termino .

    PLUS            reduce using rule 33 (expresionMatematica -> termino .)
    MINUS           reduce using rule 33 (expresionMatematica -> termino .)
    TIMES           reduce using rule 33 (expresionMatematica -> termino .)
    DIVIDE          reduce using rule 33 (expresionMatematica -> termino .)
    MODULO          reduce using rule 33 (expresionMatematica -> termino .)
    EQUALS          reduce using rule 33 (expresionMatematica -> termino .)
    NOT_EQUALS      reduce using rule 33 (expresionMatematica -> termino .)
    MORE_EQUAL      reduce using rule 33 (expresionMatematica -> termino .)
    LESS_EQUAL      reduce using rule 33 (expresionMatematica -> termino .)
    MORETHAN        reduce using rule 33 (expresionMatematica -> termino .)
    LESSTHAN        reduce using rule 33 (expresionMatematica -> termino .)
    $end            reduce using rule 33 (expresionMatematica -> termino .)
    RPAREN          reduce using rule 33 (expresionMatematica -> termino .)
    LOGICAL_AND     reduce using rule 33 (expresionMatematica -> termino .)
    LOGICAL_OR      reduce using rule 33 (expresionMatematica -> termino .)


state 16

    (49) expresionBooleana -> bool .

    LOGICAL_AND     reduce using rule 49 (expresionBooleana -> bool .)
    LOGICAL_OR      reduce using rule 49 (expresionBooleana -> bool .)
    $end            reduce using rule 49 (expresionBooleana -> bool .)


state 17

    (36) termino -> numero .

    PLUS            reduce using rule 36 (termino -> numero .)
    MINUS           reduce using rule 36 (termino -> numero .)
    TIMES           reduce using rule 36 (termino -> numero .)
    DIVIDE          reduce using rule 36 (termino -> numero .)
    MODULO          reduce using rule 36 (termino -> numero .)
    EQUALS          reduce using rule 36 (termino -> numero .)
    NOT_EQUALS      reduce using rule 36 (termino -> numero .)
    MORE_EQUAL      reduce using rule 36 (termino -> numero .)
    LESS_EQUAL      reduce using rule 36 (termino -> numero .)
    MORETHAN        reduce using rule 36 (termino -> numero .)
    LESSTHAN        reduce using rule 36 (termino -> numero .)
    $end            reduce using rule 36 (termino -> numero .)
    RPAREN          reduce using rule 36 (termino -> numero .)
    LOGICAL_AND     reduce using rule 36 (termino -> numero .)
    LOGICAL_OR      reduce using rule 36 (termino -> numero .)


state 18

    (45) bool -> TRUE .

    LOGICAL_AND     reduce using rule 45 (bool -> TRUE .)
    LOGICAL_OR      reduce using rule 45 (bool -> TRUE .)
    $end            reduce using rule 45 (bool -> TRUE .)
    ASSIGN          reduce using rule 45 (bool -> TRUE .)


state 19

    (46) bool -> FALSE .

    LOGICAL_AND     reduce using rule 46 (bool -> FALSE .)
    LOGICAL_OR      reduce using rule 46 (bool -> FALSE .)
    $end            reduce using rule 46 (bool -> FALSE .)
    ASSIGN          reduce using rule 46 (bool -> FALSE .)


state 20

    (43) numero -> INTEGER .

    PLUS            reduce using rule 43 (numero -> INTEGER .)
    MINUS           reduce using rule 43 (numero -> INTEGER .)
    TIMES           reduce using rule 43 (numero -> INTEGER .)
    DIVIDE          reduce using rule 43 (numero -> INTEGER .)
    MODULO          reduce using rule 43 (numero -> INTEGER .)
    EQUALS          reduce using rule 43 (numero -> INTEGER .)
    NOT_EQUALS      reduce using rule 43 (numero -> INTEGER .)
    MORE_EQUAL      reduce using rule 43 (numero -> INTEGER .)
    LESS_EQUAL      reduce using rule 43 (numero -> INTEGER .)
    MORETHAN        reduce using rule 43 (numero -> INTEGER .)
    LESSTHAN        reduce using rule 43 (numero -> INTEGER .)
    $end            reduce using rule 43 (numero -> INTEGER .)
    RPAREN          reduce using rule 43 (numero -> INTEGER .)
    LOGICAL_AND     reduce using rule 43 (numero -> INTEGER .)
    LOGICAL_OR      reduce using rule 43 (numero -> INTEGER .)


state 21

    (44) numero -> FLOAT .

    PLUS            reduce using rule 44 (numero -> FLOAT .)
    MINUS           reduce using rule 44 (numero -> FLOAT .)
    TIMES           reduce using rule 44 (numero -> FLOAT .)
    DIVIDE          reduce using rule 44 (numero -> FLOAT .)
    MODULO          reduce using rule 44 (numero -> FLOAT .)
    EQUALS          reduce using rule 44 (numero -> FLOAT .)
    NOT_EQUALS      reduce using rule 44 (numero -> FLOAT .)
    MORE_EQUAL      reduce using rule 44 (numero -> FLOAT .)
    LESS_EQUAL      reduce using rule 44 (numero -> FLOAT .)
    MORETHAN        reduce using rule 44 (numero -> FLOAT .)
    LESSTHAN        reduce using rule 44 (numero -> FLOAT .)
    $end            reduce using rule 44 (numero -> FLOAT .)
    RPAREN          reduce using rule 44 (numero -> FLOAT .)
    LOGICAL_AND     reduce using rule 44 (numero -> FLOAT .)
    LOGICAL_OR      reduce using rule 44 (numero -> FLOAT .)


state 22

    (29) asignacion -> IDENTIFIER ASSIGN . expresion
    (30) expresion -> . expresionMatematica
    (31) expresion -> . expresionBooleana
    (32) expresion -> . STRING
    (33) expresionMatematica -> . termino
    (34) expresionMatematica -> . expresionMatematica operando termino
    (47) expresionBooleana -> . expresionMatematica operandoBooleano expresionMatematica
    (48) expresionBooleana -> . expresionBooleana operador_logico expresionBooleana
    (49) expresionBooleana -> . bool
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (45) bool -> . TRUE
    (46) bool -> . FALSE
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 42
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    expresion                      shift and go to state 44
    expresionMatematica            shift and go to state 9
    expresionBooleana              shift and go to state 10
    termino                        shift and go to state 15
    bool                           shift and go to state 16
    numero                         shift and go to state 17

state 23

    (7) asignacion_corta -> IDENTIFIER SHORTASSIGN . expresion
    (30) expresion -> . expresionMatematica
    (31) expresion -> . expresionBooleana
    (32) expresion -> . STRING
    (33) expresionMatematica -> . termino
    (34) expresionMatematica -> . expresionMatematica operando termino
    (47) expresionBooleana -> . expresionMatematica operandoBooleano expresionMatematica
    (48) expresionBooleana -> . expresionBooleana operador_logico expresionBooleana
    (49) expresionBooleana -> . bool
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (45) bool -> . TRUE
    (46) bool -> . FALSE
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    STRING          shift and go to state 11
    IDENTIFIER      shift and go to state 42
    LPAREN          shift and go to state 13
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    expresion                      shift and go to state 45
    expresionMatematica            shift and go to state 9
    expresionBooleana              shift and go to state 10
    termino                        shift and go to state 15
    bool                           shift and go to state 16
    numero                         shift and go to state 17

state 24

    (34) expresionMatematica -> expresionMatematica operando . termino
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    IDENTIFIER      shift and go to state 42
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    termino                        shift and go to state 46
    numero                         shift and go to state 17

state 25

    (47) expresionBooleana -> expresionMatematica operandoBooleano . expresionMatematica
    (33) expresionMatematica -> . termino
    (34) expresionMatematica -> . expresionMatematica operando termino
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    IDENTIFIER      shift and go to state 42
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    expresionMatematica            shift and go to state 47
    termino                        shift and go to state 15
    numero                         shift and go to state 17

state 26

    (38) operando -> PLUS .

    IDENTIFIER      reduce using rule 38 (operando -> PLUS .)
    LPAREN          reduce using rule 38 (operando -> PLUS .)
    INTEGER         reduce using rule 38 (operando -> PLUS .)
    FLOAT           reduce using rule 38 (operando -> PLUS .)


state 27

    (39) operando -> MINUS .

    IDENTIFIER      reduce using rule 39 (operando -> MINUS .)
    LPAREN          reduce using rule 39 (operando -> MINUS .)
    INTEGER         reduce using rule 39 (operando -> MINUS .)
    FLOAT           reduce using rule 39 (operando -> MINUS .)


state 28

    (40) operando -> TIMES .

    IDENTIFIER      reduce using rule 40 (operando -> TIMES .)
    LPAREN          reduce using rule 40 (operando -> TIMES .)
    INTEGER         reduce using rule 40 (operando -> TIMES .)
    FLOAT           reduce using rule 40 (operando -> TIMES .)


state 29

    (41) operando -> DIVIDE .

    IDENTIFIER      reduce using rule 41 (operando -> DIVIDE .)
    LPAREN          reduce using rule 41 (operando -> DIVIDE .)
    INTEGER         reduce using rule 41 (operando -> DIVIDE .)
    FLOAT           reduce using rule 41 (operando -> DIVIDE .)


state 30

    (42) operando -> MODULO .

    IDENTIFIER      reduce using rule 42 (operando -> MODULO .)
    LPAREN          reduce using rule 42 (operando -> MODULO .)
    INTEGER         reduce using rule 42 (operando -> MODULO .)
    FLOAT           reduce using rule 42 (operando -> MODULO .)


state 31

    (50) operandoBooleano -> EQUALS .

    IDENTIFIER      reduce using rule 50 (operandoBooleano -> EQUALS .)
    LPAREN          reduce using rule 50 (operandoBooleano -> EQUALS .)
    INTEGER         reduce using rule 50 (operandoBooleano -> EQUALS .)
    FLOAT           reduce using rule 50 (operandoBooleano -> EQUALS .)


state 32

    (51) operandoBooleano -> NOT_EQUALS .

    IDENTIFIER      reduce using rule 51 (operandoBooleano -> NOT_EQUALS .)
    LPAREN          reduce using rule 51 (operandoBooleano -> NOT_EQUALS .)
    INTEGER         reduce using rule 51 (operandoBooleano -> NOT_EQUALS .)
    FLOAT           reduce using rule 51 (operandoBooleano -> NOT_EQUALS .)


state 33

    (52) operandoBooleano -> MORE_EQUAL .

    IDENTIFIER      reduce using rule 52 (operandoBooleano -> MORE_EQUAL .)
    LPAREN          reduce using rule 52 (operandoBooleano -> MORE_EQUAL .)
    INTEGER         reduce using rule 52 (operandoBooleano -> MORE_EQUAL .)
    FLOAT           reduce using rule 52 (operandoBooleano -> MORE_EQUAL .)


state 34

    (53) operandoBooleano -> LESS_EQUAL .

    IDENTIFIER      reduce using rule 53 (operandoBooleano -> LESS_EQUAL .)
    LPAREN          reduce using rule 53 (operandoBooleano -> LESS_EQUAL .)
    INTEGER         reduce using rule 53 (operandoBooleano -> LESS_EQUAL .)
    FLOAT           reduce using rule 53 (operandoBooleano -> LESS_EQUAL .)


state 35

    (54) operandoBooleano -> MORETHAN .

    IDENTIFIER      reduce using rule 54 (operandoBooleano -> MORETHAN .)
    LPAREN          reduce using rule 54 (operandoBooleano -> MORETHAN .)
    INTEGER         reduce using rule 54 (operandoBooleano -> MORETHAN .)
    FLOAT           reduce using rule 54 (operandoBooleano -> MORETHAN .)


state 36

    (55) operandoBooleano -> LESSTHAN .

    IDENTIFIER      reduce using rule 55 (operandoBooleano -> LESSTHAN .)
    LPAREN          reduce using rule 55 (operandoBooleano -> LESSTHAN .)
    INTEGER         reduce using rule 55 (operandoBooleano -> LESSTHAN .)
    FLOAT           reduce using rule 55 (operandoBooleano -> LESSTHAN .)


state 37

    (48) expresionBooleana -> expresionBooleana operador_logico . expresionBooleana
    (47) expresionBooleana -> . expresionMatematica operandoBooleano expresionMatematica
    (48) expresionBooleana -> . expresionBooleana operador_logico expresionBooleana
    (49) expresionBooleana -> . bool
    (33) expresionMatematica -> . termino
    (34) expresionMatematica -> . expresionMatematica operando termino
    (45) bool -> . TRUE
    (46) bool -> . FALSE
    (35) termino -> . IDENTIFIER
    (36) termino -> . numero
    (37) termino -> . LPAREN expresionMatematica RPAREN
    (43) numero -> . INTEGER
    (44) numero -> . FLOAT

    TRUE            shift and go to state 18
    FALSE           shift and go to state 19
    IDENTIFIER      shift and go to state 42
    LPAREN          shift and go to state 13
    INTEGER         shift and go to state 20
    FLOAT           shift and go to state 21

    expresionBooleana              shift and go to state 48
    expresionMatematica            shift and go to state 49
    bool                           shift and go to state 16
    termino                        shift and go to state 15
    numero                         shift and go to state 17

state 38

    (56) operador_logico -> LOGICAL_AND .

    TRUE            reduce using rule 56 (operador_logico -> LOGICAL_AND .)
    FALSE           reduce using rule 56 (operador_logico -> LOGICAL_AND .)
    IDENTIFIER      reduce using rule 56 (operador_logico -> LOGICAL_AND .)
    LPAREN          reduce using rule 56 (operador_logico -> LOGICAL_AND .)
    INTEGER         reduce using rule 56 (operador_logico -> LOGICAL_AND .)
    FLOAT           reduce using rule 56 (operador_logico -> LOGICAL_AND .)


state 39

    (57) operador_logico -> LOGICAL_OR .

    TRUE            reduce using rule 57 (operador_logico -> LOGICAL_OR .)
    FALSE           reduce using rule 57 (operador_logico -> LOGICAL_OR .)
    IDENTIFIER      reduce using rule 57 (operador_logico -> LOGICAL_OR .)
    LPAREN          reduce using rule 57 (operador_logico -> LOGICAL_OR .)
    INTEGER         reduce using rule 57 (operador_logico -> LOGICAL_OR .)
    FLOAT           reduce using rule 57 (operador_logico -> LOGICAL_OR .)


state 40

    (58) pedirDatos -> FMT DOT . SCANLN LPAREN AMPERSAND IDENTIFIER RPAREN
    (59) imprimir -> FMT DOT . PRINTLN LPAREN valores RPAREN

    SCANLN          shift and go to state 50
    PRINTLN         shift and go to state 51


state 41

    (37) termino -> LPAREN expresionMatematica . RPAREN
    (34) expresionMatematica -> expresionMatematica . operando termino
    (38) operando -> . PLUS
    (39) operando -> . MINUS
    (40) operando -> . TIMES
    (41) operando -> . DIVIDE
    (42) operando -> . MODULO

    RPAREN          shift and go to state 52
    PLUS            shift and go to state 26
    MINUS           shift and go to state 27
    TIMES           shift and go to state 28
    DIVIDE          shift and go to state 29
    MODULO          shift and go to state 30

    operando                       shift and go to state 24

state 42

    (35) termino -> IDENTIFIER .

    RPAREN          reduce using rule 35 (termino -> IDENTIFIER .)
    PLUS            reduce using rule 35 (termino -> IDENTIFIER .)
    MINUS           reduce using rule 35 (termino -> IDENTIFIER .)
    TIMES           reduce using rule 35 (termino -> IDENTIFIER .)
    DIVIDE          reduce using rule 35 (termino -> IDENTIFIER .)
    MODULO          reduce using rule 35 (termino -> IDENTIFIER .)
    EQUALS          reduce using rule 35 (termino -> IDENTIFIER .)
    NOT_EQUALS      reduce using rule 35 (termino -> IDENTIFIER .)
    MORE_EQUAL      reduce using rule 35 (termino -> IDENTIFIER .)
    LESS_EQUAL      reduce using rule 35 (termino -> IDENTIFIER .)
    MORETHAN        reduce using rule 35 (termino -> IDENTIFIER .)
    LESSTHAN        reduce using rule 35 (termino -> IDENTIFIER .)
    $end            reduce using rule 35 (termino -> IDENTIFIER .)
    LOGICAL_AND     reduce using rule 35 (termino -> IDENTIFIER .)
    LOGICAL_OR      reduce using rule 35 (termino -> IDENTIFIER .)


state 43

    (8) crearVariable -> VAR IDENTIFIER . tipo ASSIGN expresion
    (9) tipo -> . int
    (10) tipo -> . float
    (11) tipo -> . complex
    (12) tipo -> . uint
    (13) tipo -> . bool
    (14) tipo -> . STRING
    (15) int -> . INT
    (16) int -> . INT8
    (17) int -> . INT16
    (18) int -> . INT32
    (19) int -> . INT64
    (20) float -> . FLOAT32
    (21) float -> . FLOAT64
    (27) complex -> . COMPLEX64
    (28) complex -> . COMPLEX128
    (22) uint -> . UINT
    (23) uint -> . UINT8
    (24) uint -> . UINT16
    (25) uint -> . UINT32
    (26) uint -> . UINT64
    (45) bool -> . TRUE
    (46) bool -> . FALSE

    STRING          shift and go to state 59
    INT             shift and go to state 60
    INT8            shift and go to state 61
    INT16           shift and go to state 62
    INT32           shift and go to state 63
    INT64           shift and go to state 64
    FLOAT32         shift and go to state 65
    FLOAT64         shift and go to state 66
    COMPLEX64       shift and go to state 67
    COMPLEX128      shift and go to state 68
    UINT            shift and go to state 69
    UINT8           shift and go to state 70
    UINT16          shift and go to state 71
    UINT32          shift and go to state 72
    UINT64          shift and go to state 73
    TRUE            shift and go to state 18
    FALSE           shift and go to state 19

    tipo                           shift and go to state 53
    int                            shift and go to state 54
    float                          shift and go to state 55
    complex                        shift and go to state 56
    uint                           shift and go to state 57
    bool                           shift and go to state 58

state 44

    (29) asignacion -> IDENTIFIER ASSIGN expresion .

    $end            reduce using rule 29 (asignacion -> IDENTIFIER ASSIGN expresion .)


state 45

    (7) asignacion_corta -> IDENTIFIER SHORTASSIGN expresion .

    $end            reduce using rule 7 (asignacion_corta -> IDENTIFIER SHORTASSIGN expresion .)


state 46

    (34) expresionMatematica -> expresionMatematica operando termino .
